CSM 3.2.1.3 Query and Code optimized
SVN-Revision: 2503